--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "^5.0.1",
     "react-whatsapp-chat-widget": "^1.1.2",
     "reactjs-localstorage": "^1.0.1",
+    "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
