--- a/package.json
+++ b/package.json
@@ -23,10 +23,14 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
+    "react-native-country-picker-modal": "^2.0.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
+    "react-select": "^5.7.0",
+    "react-select-country-list": "^2.2.3",
     "react-whatsapp-chat-widget": "^1.1.2",
     "reactjs-localstorage": "^1.0.1",
+    "rn-country-dropdown-picker": "^2.1.8",
     "socket.io-client": "^4.6.1",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
