--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "bootstrap": "^5.2.2",
+    "cdbreact": "^1.5.9",
     "formik": "^2.2.9",
     "mdb-react-ui-kit": "^5.1.0",
     "nodemailer": "^6.9.1",
@@ -24,6 +25,7 @@
     "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-native-country-picker-modal": "^2.0.0",
+    "react-native-picker-select": "^8.0.4",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
     "react-select": "^5.7.0",
