--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-chat-elements": "^12.0.8",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
