--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.6.0",
+    "react-chat-bubble": "^0.8.7",
     "react-chat-elements": "^12.0.8",
     "react-dom": "^18.2.0",
+    "react-input-verification-code": "^1.0.2",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-picker-select": "^8.0.4",
     "react-router-dom": "^6.4.3",
