--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mdb-react-ui-kit": "^5.1.0",
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
+    "react-apexcharts": "^1.4.0",
     "react-bootstrap": "^2.6.0",
     "react-chat-bubble": "^0.8.7",
     "react-chat-elements": "^12.0.8",
