--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-chat-bubble": "^0.8.7",
     "react-chat-elements": "^12.0.8",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-input-verification-code": "^1.0.2",
     "react-native-country-picker-modal": "^2.0.0",
     "react-native-picker-select": "^8.0.4",
