--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bootstrap": "^5.2.2",
     "cdbreact": "^1.5.9",
     "formik": "^2.2.9",
+    "framer-motion": "^10.11.2",
     "mdb-react-ui-kit": "^5.1.0",
     "nodemailer": "^6.9.1",
     "react": "^18.2.0",
